moving files in AuxCode

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>GitHub_PR_Hen15</name>
+	<name>PR_GitHub_Hen15</name>
 	<comment></comment>
 	<projects>
 	</projects>
