--- a/Makefile_compilers
+++ b/Makefile_compilers
@@ -3,6 +3,7 @@
 # Note that most entries currently in place will need editing to
 # accept the DEBUG flag
 
+# SYSTYPE = "MyMachine"
 # SYSTYPE = "COSM"
 # SYSTYPE = "ODIN"
 # SYSTYPE = "Darwin"
@@ -26,6 +27,21 @@ OPTIMIZE =   -g -O3 -Wall	# optimization, debugging and warning flags
 else
 OPTIMIZE = -O3                  # optimization
 endif
+
+
+ifeq ($(SYSTYPE),"MyMachine")
+ifeq (PARALLEL,$(findstring PARALLEL,$(OPT)))
+CC       =  mpicc
+GSL_INCL = -I/usr/local/Cellar/open-mpi/1.10.1/include
+GSL_LIBS = -L/usr/local/opt/libevent/lib -L/usr/local/Cellar/open-mpi/1.10.1/lib
+else
+CC       =   cc
+GSL_INCL = -I/usr/local/include
+GSL_LIBS = -L/usr/local/lib
+endif
+endif
+
+
 
 ifeq ($(SYSTYPE),"Sussex")
 ifeq (PARALLEL,$(findstring PARALLEL,$(OPT)))
